# polymarket-arb-bot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LOG_ANALYSIS_PLAN.md  README.md  REVIEW_ACTION_PLAN.md  SPEC  config.yaml  configmap-code.yaml  deployment.yaml  docker-compose.yaml  docker-compose.yml  jean.json  package.json  pyproject.toml
.claude/rules/: error-handling.md  websocket.md
.github/workflows/: ci.yml  docker.yaml
analysis/: mr_thresholds.py
api/: research_state.py  server.py
api/controllers/: __init__.py  bot_controller.py  observation_controller.py  pipeline_controller.py
api/models/: __init__.py
api/routes/: config.py  control.py  metrics.py  research.py  trading.py
config/: default.yaml
dashboard/: Dockerfile  bun.lockb  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
dashboard/src/: App.css  App.tsx  index.css
docker/: Dockerfile.dev  entrypoint.sh  supervisord.conf
docs/: DASHBOARD_PROGRESS.md  DATA_MODELS.md  DESIGN_SPEC.md
engine/: __init__.py  config.py  events.py  model_bridge.py  signal_evaluator.py  types.py
engine/streams/: __init__.py  base.py  binance_direct.py  chainlink_rpc.py  clob_adapter.py  rtds.py
k8s/: configmap.yaml  deployment.yaml  service.yaml
legacy/: __init__.py
research/: README.md  __init__.py  cli.py  pivot_plan.md  run_research.py  testing_plan.md
research/analysis/: __init__.py  lag_analysis.py  session_analysis.py  validation.py  volatility_analysis.py
research/data/: __init__.py  binance_historical.py  feature_extractor.py  orderbook_features.py
research/models/: __init__.py  edge_calculator.py  probability_surface.py
research/observation/: __init__.py  enricher.py  synchronizer.py  verify.py
research/signals/: __init__.py  detectors.py
research/tests/: __init__.py  test_feature_extraction.py  test_orderbook_features.py  test_signal_detectors.py
scripts/: calc_pnl.py
src/: __init__.py  analyze_spreads.py  arb_bot.py  config.py  main.py
src/api/: observation_controller.py  pipeline_controller.py  research_state.py  (+1 more)
tests/: conftest.py  test_active_markets.py  test_bankroll_scenarios.py  test_chase_protection.py  test_config.py  test_crypto_updown_ws.py  test_engine_cleanup.py  test_engine_merge.py  test_entry_safety_guards.py  test_grid_maker.py  test_integration_price_flow.py  test_inventory.py  test_market_discovery.py  test_models.py  test_order_mgr.py  test_polymarket_api.py  test_polymarket_ws_raw.py  test_quote_calc.py  test_redeem.py  test_signal_detection.py  test_unit_config.py  test_unit_discovery.py  test_unit_market_state.py
trading/: bot.py  cli.py  config.py
(+238 files in other folders)
