[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-late-entry"
version = "0.1.0"
description = "Late-entry bot for Polymarket 15m crypto Up/Down markets"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client",
    "requests",
    "python-dotenv",
    "pyyaml",
    "web3",
    "websockets>=12.0",
    "fastapi[standard]",
    "uvicorn[standard]",
]

[project.scripts]
late-entry = "late_entry.bot:main"
complete-set = "complete_set.bot:main"
dashboard = "complete_set.dashboard:main"

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/late_entry", "src/complete_set"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
