[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "polymarket-arb-bot"
version = "0.1.0"
description = "Polymarket arb bot — complete-set, trend-rider, and observer strategies"
requires-python = ">=3.11"
dependencies = [
    "py-clob-client",
    "requests",
    "python-dotenv",
    "pyyaml",
    "web3",
    "websockets>=12.0",
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
]

[project.scripts]
complete-set = "complete_set.bot:main"
trend-rider = "trend_rider.engine:main"
observer = "observer.bot:main"

[dependency-groups]
dev = ["ruff", "pytest"]

[tool.hatch.build.targets.wheel]
packages = ["src/complete_set", "src/trend_rider", "src/observer"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
